# ThereIsAnIdeaButNoProofs

./: .gitignore  .gitmodules  Dockerfile  README.md
src/cpp/: CMakeLists.txt  config.ini  mails_domains.txt  mails_domains2.txt
src/cpp/src/: clickhouse_manager.cpp  clickhouse_manager.hpp  config.hpp  csv_worker.h  internal_structs.h  main.cpp  table_worker.cpp  table_worker.hpp
src/py/: requirements.txt
src/py/lib/: __init__.py
